--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "angular-local-storage": "^0.2.7",
-    "angular-messages": "^1.5.3"
+    "angular-messages": "^1.5.3",
+    "angular-socket-io": "^0.7.0"
   }
 }
