--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "socket.io": "^1.4.5"
   },
   "devDependencies": {
     "bower": "^1.3.3",
