--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "HelloIonic",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.2.4"
+    "ionic": "driftyco/ionic-bower#1.2.4",
+    "angular-mocks": "^1.5.5"
   },
   "dependencies": {
     "angular-local-storage": "^0.2.7",
