--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
+    "jasmine-core": "^2.4.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "moment": "^2.13.0",
+    "requirejs": "^2.2.0",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
