--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "css-loading": "^1.4.0",
     "gulp-util": "^2.2.14",
     "jasmine-core": "^2.4.1",
     "karma-jasmine": "^1.0.2",
