--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "css-loading": "^1.4.0",
-    "gulp-util": "^2.2.14",
+    "gulp": "^3.9.1",
+    "gulp-jshint": "^2.0.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-util": "^2.2.20",
     "jasmine-core": "^2.4.1",
+    "jshint": "^2.9.2",
+    "jshint-stylish": "^2.2.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
     "moment": "^2.13.0",
